--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
+    <button class="s drum">s</button>
     <button class="w drum">w</button>
     <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
+    <button class="p drum">p</button>
+    <button class="n drum">n</button>
+    <button class="i drum">i</button>
     <button class="l drum">l</button>
   </div>
 
